<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/grisFondo"
    tools:context="pablotoledo.airsendtfg.RecibirDatos">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:src="@drawable/cat_banjo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/avisoEntrada"
        android:id="@+id/textView3"
        android:gravity="center"
        android:textColor="@color/blanco"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Remitente"
        android:id="@+id/remitenteTexto"
        android:layout_below="@+id/textView3"
        android:textColor="@color/blanco"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ipOrigen"
        android:layout_marginTop="10dp"
        android:textColor="@color/blanco"
        android:id="@+id/IPDestinoTexto"
        android:layout_below="@+id/remitenteTexto"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tamaño"
        android:textColor="@color/blanco"
        android:layout_marginTop="10dp"
        android:id="@+id/TamañoTexto"
        android:layout_below="@+id/IPDestinoTexto"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numeroArchivos"
        android:layout_marginTop="10dp"
        android:id="@+id/NumeroArchivosTexto"
        android:textColor="@color/blanco"
        android:layout_below="@+id/TamañoTexto"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Aceptar"
        android:id="@+id/aceptarBoton"
        android:onClick="botonAceptar"
        android:layout_below="@+id/progressBar2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancelar"
        android:id="@+id/cancelarBoton"
        android:layout_below="@+id/aceptarBoton"
        android:onClick="botonCancelar"
        android:layout_alignRight="@+id/aceptarBoton"
        android:layout_alignEnd="@+id/aceptarBoton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/estado"
        android:layout_marginTop="10dp"
        android:id="@+id/estadoText"
        android:textColor="@color/blanco"
        android:layout_below="@+id/NumeroArchivosTexto"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/estadoText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
