<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grisFondo"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pablotoledo.airsendtfg.Instalacion">


    <TextView
        android:id="@+id/ayudaNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/textoNombre"
        android:textColor="@color/blanco" />

    <EditText
        android:id="@+id/nombreUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/boton"
        android:layout_alignLeft="@+id/ayudaNombre"
        android:layout_alignRight="@+id/boton"
        android:layout_alignStart="@+id/ayudaNombre"
        android:layout_below="@+id/ayudaNombre"
        android:lines="1"
        android:singleLine="true"
        android:textColor="@color/blanco" />

    <Button
        android:id="@+id/boton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:onClick="botonAceptar"
        android:text="@string/Aceptar" />

    <TextView
        android:id="@+id/ayudaSeleccionar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/nombreUsuario"
        android:text="@string/seleccionImagenUsuario"
        android:textColor="@color/blanco" />

    <GridView
        android:id="@+id/listadoAvatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/boton"
        android:layout_below="@+id/ayudaSeleccionar"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:clickable="false"
        android:columnWidth="100dp"
        android:drawSelectorOnTop="true"
        android:focusable="true"
        android:gravity="center"
        android:horizontalSpacing="5dp"
        android:numColumns="auto_fit"
        android:stretchMode="columnWidth"
        android:verticalSpacing="5dp" />

</RelativeLayout>
